--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -102,6 +102,7 @@
                             <li><a href="{{ path('_expediente_report_routes_club') }}">{% trans %}label.routes.club{% endtrans %}</a></li>
                             <!-- <li><a href="{{ path('_expediente_report_penalty_students') }}">{% trans %}label.penalty.report{% endtrans %}</a></li> -->
                             <li><a href="{{ path('_expediente_report_students_routes') }}">{% trans %}label.student.route{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_report_course_by_group') }}">{% trans %}label.report.grades.by.group.course{% endtrans %}</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
