--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/routes_club.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/routes_club.html.twig
@@ -29,7 +29,7 @@
             <div id="report" style="margin-top: 25px; width: 950px;">
 
                 <div class="titles">
-                    <div class="left">Corporación Educativa Saint Michael S.A.</div>
+                    <div class="left">{{corpo_name}}</div>
                     <div class="right">Control de Buses de Clubes Escuela.</div>
                     <div class="clear"></div>
 
