--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
@@ -89,7 +89,7 @@
             {% if groups != null %}
                 {% for group in groups %}
                     <div class="titles" style="font-size: 10px;">
-                        <div class="left">Corporaci?n Educativa Saint Michael S.A.</div>
+                        <div class="left">{{corpo_name}}</div>
                         <div class="right">Reporte de estudiantes. Curso Lectivo 2013</div>
                         <div class="clear"></div>
 
@@ -146,7 +146,7 @@
                 {% if grades != null %}
                     {% for grade in grades %}
                         <div class="titles" style="font-size: 10px;">
-                            <div class="left">Corporaci?n Educativa Saint Michael S.A.</div>
+                            <div class="left">{{corpo_name}}</div>
                             <div class="right">Reporte de estudiantes. Curso Lectivo 2013</div>
                             <div class="clear"></div>
 
@@ -202,7 +202,7 @@
                 {% else %}
                     {% for institution in institutions %}
                         <div class="titles" style="font-size: 10px;">
-                            <div class="left">Corporaci?n Educativa Saint Michael S.A.</div>
+                            <div class="left">{{corpo_name}}</div>
                             <div class="right">Reporte de estudiantes. Curso Lectivo 2013</div>
                             <div class="clear"></div>
 
