--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
@@ -56,7 +56,7 @@
 
                 {% endif %}
                 </br></br>
-                <div class="center" style="float: left; width: 300px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %}</div>
+                <div class="center" style="float: left; width: 300px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %} {{ corpo_name }}</div>
                 <div class="center" style="float: left; width: 300px; font-size: 14px;">{% trans %}label.ticket6 {% endtrans %}</div>
                 {% if ticket.student.groupyear == '11-1' or ticket.student.groupyear == '11-2' or ticket.student.groupyear == '11-3' or
                 ticket.student.groupyear == '10-1' or ticket.student.groupyear == '10-2' or ticket.student.groupyear == '10-3' or
@@ -95,7 +95,7 @@
                     <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
                     <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
                     </br></br>
-                    <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %}</div>
+                    <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %} {{ corpo_name }}</div>
                     <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket6 {% endtrans %}</div>
                     </br></br></br></br></br></br></br></br></br></br>
                     <div class="center" style="float: left; width: 860px; font-size: 14px;">{{ text }}</div>
