--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
@@ -26,7 +26,7 @@ Tecnotek :: Expediente :: Super Administrador
 <link rel="stylesheet" href="{{ asset('fancybox/jquery.fancybox.css') }}" type="text/css" media="all" />
 <link rel="stylesheet" href="{{ asset('fancybox/fancybox_style.css') }}" type="text/css" media="all" />
 <link rel="stylesheet" href="{{ asset('css/jquery-ui-timepicker-addon.css') }}" type="text/css" media="all" />
-<link rel="stylesheet" href="{{ asset('saintmichael//stylesheets/waitingBar.css') }}" type="text/css" media="all" />
+<link rel="stylesheet" href="{{ asset(style ~ '/stylesheets/waitingBar.css') }}" type="text/css" media="all" />
 <style>
     @media screen {
         .noPrint {/*display:block !important;*/}
