--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodBestAverages.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodBestAverages.html.twig
@@ -29,8 +29,8 @@
     <link rel="stylesheet" href="{{ asset('fancybox/jquery.fancybox.css') }}" type="text/css" media="all" />
     <link rel="stylesheet" href="{{ asset('fancybox/fancybox_style.css') }}" type="text/css" media="all" />
     <link rel="stylesheet" href="{{ asset('css/jquery-ui-timepicker-addon.css') }}" type="text/css" media="all" />
-    <link rel="stylesheet" href="{{ asset('saintmichael//stylesheets/waitingBar.css') }}" type="text/css" media="all" />
-    <link rel="stylesheet" href="{{ asset('saintmichael//stylesheets/qualificationsOfPeriod.css') }}" type="text/css" media="all" />
+    <link rel="stylesheet" href="{{ asset(style ~ '/stylesheets/waitingBar.css') }}" type="text/css" media="all" />
+    <link rel="stylesheet" href="{{ asset(style ~ '/stylesheets/qualificationsOfPeriod.css') }}" type="text/css" media="all" />
 
     <style type="text/css" type="text/css" media="all">
         input {font-weight:bold;}
