--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_routes.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_routes.html.twig
@@ -38,7 +38,7 @@
             <div id="report" style="margin-top: 25px;">
 
                 <div class="titles" style="font-size: 10px;">
-                    <div class="left">Corporación Educativa Saint Michael S.A.</div>
+                    <div class="left">{{corpo_name}}</div>
                     <div class="right">Control de Buses Escuela.</div>
                     <div class="clear"></div>
 
