--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -12,9 +12,9 @@
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css" type="text/css" media="all"/>
 
-    <link rel="stylesheet" href="{{ asset('saintmichael/stylesheets/style.css') }}" type="text/css" media="all"/>
-    <link rel="stylesheet" href="{{ asset('saintmichael/stylesheets/normalize.css') }}" type="text/css" media="all"/>
-    <link rel="stylesheet" href="{{ asset('saintmichael/stylesheets/app.css') }}" type="text/css" media="all"/>
+    <link rel="stylesheet" href="{{ asset(style ~ '/stylesheets/style.css') }}" type="text/css" media="all"/>
+    <link rel="stylesheet" href="{{ asset(style ~ '/stylesheets/normalize.css') }}" type="text/css" media="all"/>
+    <link rel="stylesheet" href="{{ asset(style ~ '/stylesheets/app.css') }}" type="text/css" media="all"/>
 
     <link rel="stylesheet" href="{{ asset('css/grid.css') }}" type="text/css" media="all"/>
     {% block extracss %}
